# Gutenberg-Book-Finder

./: .gitignore  CONTRIBUTING.md  README.md  stacks-web-link
.github/workflows/: deploy.yml
data/: catalog.json  layout.json
data/enrich/: cluster_labels.json
data/enrich/tags/: batch_0.json  batch_1.json  batch_10.json  batch_11.json  batch_12.json  batch_13.json  batch_14.json  batch_15.json  batch_16.json  batch_17.json  batch_18.json  batch_19.json  batch_2.json  batch_20.json  batch_21.json  batch_22.json  batch_23.json  batch_24.json  batch_25.json  batch_26.json  batch_27.json  batch_28.json  batch_29.json  batch_3.json  batch_30.json  batch_31.json  batch_32.json  batch_33.json  batch_34.json  batch_35.json  batch_36.json  batch_37.json  batch_38.json  batch_39.json  batch_4.json  batch_5.json  batch_6.json  batch_7.json  batch_8.json  batch_9.json
docs/: design.md
docs/superpowers/plans/: 2026-07-04-book-finder.md  2026-07-04-m1-pipeline-and-map.md
docs/superpowers/specs/: 2026-07-04-book-finder-design.md
pipeline/: pyproject.toml
pipeline/src/gutenberg_galaxy/: __init__.py  __main__.py  catalog.py  embed.py  enrich.py  export.py  layout.py  openrouter.py  paths.py
pipeline/tests/: test_catalog.py  test_enrich.py  test_export.py
pipeline/tests/fixtures/: gutendex_page.json
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: books.json
web/src/: card.ts  filters.test.ts  filters.ts  grid.ts  main.ts  meta.ts  search.test.ts  search.ts  similar.test.ts  similar.ts  style.css  types.ts  url.test.ts  url.ts
